# baba-is-you

./: .gitignore  Baba_is_You (2).mdj  README.md
baba_is_you/: CMakeLists.txt  Doxyfile  MaterielType.cpp  Qitem.cpp  Qitem.h  baba_is_you.pro  board.cpp  board.h  direction.cpp  direction.h  game.cpp  game.h  item.cpp  item.h  level.cpp  level.h  main-console.cpp  main.cpp  position.cpp  position.h  qboard.cpp  qboard.h  recource.qrc  square.cpp  square.h  startWindow.cpp  startWindow.h  status.h  text.h  type.cpp  type.h  typeStatus.h
baba_is_you/.doc/: .gitignore
baba_is_you/.doc/html/: annotated.html  board_8h_source.html  class_board-members.html  class_board.html  class_controller-members.html  class_controller.html  class_game-members.html  class_game.html  class_item-members.html  class_item.html  class_level-members.html  class_level.html  class_position-members.html  class_position.html  class_square-members.html  class_square.html  class_view-members.html  class_view.html  classes.html  controller_8h_source.html  dir_b2f003339c516cc00c8cadcafbe82f13.html  dir_d3bff1ab3a40b4e5d0775c67ace1b0da.html  direction_8h_source.html  files.html  functions.html  functions_func.html  game_8h_source.html  index.html  (+8 more)
baba_is_you/controller/: controller.cpp  controller.h  qcontroller.cpp  qcontroller.h
baba_is_you/levels/: level_0.txt  level_1.txt  level_1999.txt  level_2.txt  level_3.txt  level_4.txt  level_99.txt
baba_is_you/observer/: observer.h
baba_is_you/test/: test.cpp  test.h
baba_is_you/view/: gui.cpp  gui.h  qcontroller.h  view.cpp  view.h
(+20 files in other folders)
